# bobmania

./: .appveyor.yml  .gitmodules  .hgignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  GPT.md  HANDOFF.md  LLM_INSTRUCTIONS.md  PLANNED_FEATURES.md  StepmaniaCore.cmake  VERSION  VISION.md  copilot-instructions.md  deploy.sh  stepmania.nsi  test_bracket_s  test_crypto  test_eco_v2  test_elo  test_export  test_final  test_gov  test_msd  test_persist  test_qr  test_qr_v2  test_swarm  test_tags
ArrowVortex/: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  CREDITS  DASHBOARD.md  DDC_FINAL_STATUS.md  DDC_SETUP_GUIDE.md  DDC_STATUS.md  DDC_TRAINING_COMPLETION_GUIDE.md  GEMINI.md  GPT.md  HANDOFF_DDREAM_FEATURES.md  HANDOFF_SESSION.md  LLM_INSTRUCTIONS.md  LUA_API.md  README.md  copilot-instructions.md  inspect_pkl.py  inspect_pkl_mocked.py  inspect_pkl_mocked_v2.py  inspect_pkl_mocked_v3.py  inspect_pkl_mocked_v4.py  inspect_pkl_mocked_v5.py  settings.local.json  test_pickle_fix.py  vcpkg.json
CMake/: DefineOptions.cmake  SMDefs.cmake
Data/: MarketplaceCatalog.json
Docs/: AGENTS.md  DASHBOARD.md  FeatureMatrix.md  HANDOFF_ANALYSIS.md  Manual_Unified.md
Scripts/: TestGymMode.lua
docs/: COMPREHENSIVE_FEATURE_LIST.md  DASHBOARD.md  LLM_UNIVERSAL.md  ROADMAP.md  SUBMODULES.md  SYSTEM_ARCHITECTURE.md  UNIFICATION_ROADMAP.md  USER_GUIDE.md
itgmania/: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  GPT.md  HANDOFF.md  LLM_INSTRUCTIONS.md  Makefile  NotePathExample.lua  RELEASE_NOTES.md  ROADMAP.md  VISION.md  handoff_2025_12_27.md  test_import  test_inv  test_market
leraine-studio/: .gitignore  CHANGELOG.md  README.md
server/: package.json
src/: Actor.cpp  Actor.h  CMakeData-actor.cmake  CMakeData-arch.cmake  CMakeData-data.cmake  CMakeData-economy.cmake  CMakeData-os.cmake  CMakeData-rage.cmake  CMakeData-singletons.cmake  CMakeLists.txt  CourseLoaderCRS.cpp  FileDownload.cpp  GameConstantsAndTypes.h  GameInput.h  GameLoop.cpp  GameState.cpp  GameState.h  HighScore.h  MusicWheel.cpp  NetworkSyncManager.cpp  NetworkSyncManager.h  NoteData.cpp  (+60 more)
(+558 files in other folders)
